--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- npm run dev -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,7 +18,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main"></script>
   </body>
 
 </html>
